--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -1,3 +1,5 @@
+@import "config";
+
 .menu-btn {
   position: absolute;
   z-index: 3;
@@ -12,5 +14,25 @@
     margin: 0 0 5px 0;
     background: #fff;
     @include easeOut;
+  }
+
+  // rotate into X with menu lines
+  &.close {
+    transform: rotate(180deg);
+
+    .btn-line {
+      // line 1 - rotate
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px)
+      }
+      // line 2 - hide
+      &:nth-child(2) {
+        opacity: 0;
+      }
+      // line 3 - rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px)
+      }
+    }
   }
 }
