--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,7 +46,18 @@
 			height: 135px;
 			background-size: 130px 130px;
 		}
-	}
+  }
+  
+  .about-info {
+    grid-template-areas:
+    "bioimage"
+    "bio"
+    "job1"
+    "job2"
+    "job3";
+
+    grid-template-columns: 1fr;
+  }
 }
 
 // smartphones
