--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 // wide screen
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // desktop & laptop
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // tablets & small laptops
@@ -58,11 +64,19 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // smartphones
 @include mediaSm {
 	main#home h1 {
 		margin-top: 10vh;
-	}
+  }
+  
+  .projects {
+    grid-template-columns: 1fr;
+  }
 }
