--- a/scss/main.scss
+++ b/scss/main.scss
@@ -71,9 +71,10 @@ main {
   }
 }
 
+// about
 .about-info {
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 2rem;
   grid-template-areas:
   "bioimage bio bio"
   "job1 job2 job3";
@@ -113,6 +114,52 @@ main {
   }
 }
 
+// work/projects
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 0 1rem;
+
+  img {
+    width: 100%;
+    height: 250px;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+// buttons
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
+
+.btn-light {
+  @extend.btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+
+// footer
 #main-footer {
   text-align: center;
   padding: 1rem;
