--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,6 +2,7 @@ $primary-color: #444;
 $secondary-color: #fca9bbf3;
 $show-home-image: true;
 $home-image: url("../img/background.jpg");
+$contact-image: url("../img/contact.jpg");
 $background-opacity: 0.9;
 
 @mixin easeOut {
@@ -10,21 +11,25 @@ $background-opacity: 0.9;
 
 @mixin background {
   @if $show-home-image {
+    &#contact-img {
+      background: $contact-image;    
+      background-size: contain;
+    }
     &#bg-img {
       background: $home-image;
-      background-attachment: fixed;
       background-size: cover;
-
-      &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba($primary-color, $background-opacity);
-        z-index: -1;
-      }
+    }
+    
+    background-attachment: fixed;
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba($primary-color, $background-opacity);
+      z-index: -1;
     }
   }
 }
