--- a/scss/main.scss
+++ b/scss/main.scss
@@ -159,6 +159,30 @@ main {
   color: #333;
 }
 
+// contact 
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+
 // footer
 #main-footer {
   text-align: center;
