--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #444;
-$secondary-color: #fca9bbf3;
+$secondary-color: rgba(117, 233, 248, 0.953);
 $show-home-image: true;
 $home-image: url("../img/background.jpg");
 $contact-image: url("../img/contact.jpg");
