--- a/scss/main.scss
+++ b/scss/main.scss
@@ -82,7 +82,7 @@ main {
 
   .bio-image {
     grid-area: bioimage;
-    width: 240px;
+    width: 100%;
     height: 260px;
     margin: auto;
     border-radius: 50%;
@@ -117,19 +117,62 @@ main {
 // work/projects
 .projects {
   display: grid;
-  grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
-  padding: 0 1rem;
+  grid-gap: 0.7rem;
 
   img {
     width: 100%;
     height: 250px;
-    border: 3px #fff solid;
+    border: 1px #fff solid;
+  }
 
-    &:hover {
-      opacity: 0.5;
-      border-color: $secondary-color;
-      @include easeOut;
+  .card {
+    perspective: 40rem;
+  }
+
+  .card-body {
+    display: flex;
+    transform-style: preserve-3d;
+    @include easeOut;
+  }
+
+  .card:hover .card-body, .card:focus .card-body {
+    transform: rotateX(-180deg);
+  }
+
+  .card-front, .card-back {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    min-width: 100%;
+  }
+
+  h3 {
+    padding-left: .5rem;
+  }
+
+  h3, .text {
+    background-color: lighten($primary-color, 20%);
+  }
+
+  .card-back {
+    transform: rotateX(-180deg) translate(-100%, 0);
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "text" "links";
+
+    .text {
+      padding: .5rem;
+      margin: 0;
+      b {
+        color: $secondary-color;
+      }
+    }
+
+    .links {
+      grid-area: links;
+      a {
+        text-align: center;
+      }
     }
   }
 }
