--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,15 +1,25 @@
 // wide screen
 @include mediaXl {
-  .projects {
-    grid-template-columns: repeat(4, 1fr);
-  }
+  .about-info {
+		.bio-image {
+			width: 240px;
+		}
+	}
+	.projects {
+		grid-template-columns: repeat(4, 1fr);
+	}
 }
 
 // desktop & laptop
 @include mediaLg {
-  .projects {
-    grid-template-columns: repeat(3, 1fr);
-  }
+	.about-info {
+		.bio-image {
+			width: 240px;
+		}
+	}
+	.projects {
+		grid-template-columns: repeat(3, 1fr);
+	}
 }
 
 // tablets & small laptops
@@ -52,31 +62,35 @@
 			height: 135px;
 			background-size: 130px 130px;
 		}
-  }
-  
-  .about-info {
-    grid-template-areas:
-    "bioimage"
-    "bio"
-    "job1"
-    "job2"
-    "job3";
+	}
 
-    grid-template-columns: 1fr;
-  }
+	.about-info {
+		grid-template-areas:
+			"bioimage"
+			"bio"
+			"job1"
+			"job2"
+			"job3";
 
-  .projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
+		grid-template-columns: 1fr;
+
+		.bio-image {
+			width: 240px;
+		}
+	}
+
+	.projects {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
 // smartphones
 @include mediaSm {
 	main#home h1 {
 		margin-top: 10vh;
-  }
-  
-  .projects {
-    grid-template-columns: 1fr;
-  }
+	}
+
+	.projects {
+		grid-template-columns: 1fr;
+	}
 }
